# LeetTrack

./: .env.example  .gitignore  ARCHITECTURE.md  DOCKER_START.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py
backend/app/: main.py
backend/app/api/v1/: auth.py  health.py  users.py
backend/app/core/: auth.py  config.py  database.py  encryption.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/workers/: celery_app.py  scheduled.py  sync.py
frontend/: Dockerfile  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/analytics/mastery/: page.tsx
frontend/app/(app)/commits/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/focus/: page.tsx
frontend/app/(app)/onboarding/: page.tsx
frontend/app/(app)/recommendations/: page.tsx
frontend/app/(app)/roadmap/[name]/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/(app)/srs/: page.tsx
frontend/app/(app)/submissions/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/: nav.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: api.ts  auth.ts  types.ts
plans/: stage-0-1.md  stage-2-plus.md
