[tool.poetry]
name = "grindstone-backend"
version = "0.1.0"
description = "Grindstone backend API"
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pyjwt = "^2.10.0"
bcrypt = "^4.2.0"
cryptography = "^43.0.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
PyGithub = "^2.5.0"
httpx = "^0.28.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
